# medical-noshow-prediction

./: .gitignore  02exploracion_datos.ipynb  03_ajuste_datos.ipynb  03ajuste_entrenamiento.ipynb  04_entrenamiento_modelo.ipynb  06_medical_noshow_app.py  README.md  main.py  pyproject.toml  requirements.txt
Modelos/: Classification_medical_no_show-LGBM.joblib
app/: streamlit_app.py
data/: X_test.csv  y_test.csv  y_train.csv
models/: Classification_medical_no_show-LGBM.joblib  label_encoder_gender.pkl  mappings.pkl  scaler.pkl
notebooks/: 01_analisis_completo.ipynb  03ajuste_entrenamiento.ipynb
notebooks/exploratory/: 02exploracion_datos.ipynb
scripts/: smoke_test.py
src/: __init__.py  data_loader.py  models.py  preprocessing.py  synthetic_data.py  visualization.py
