[project]
name = "medical-noshow-prediction"
version = "1.0.0"
description = "Sistema de prediccion de no-show medico"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.2",
    "scikit-learn>=1.3.2",
    "imbalanced-learn>=0.11.0",
    "scipy>=1.11.4",
    "statsmodels>=0.14.1",
    "lightgbm>=4.3.0",
    "sdv>=1.7.0",
    "streamlit>=1.29.0",
    "joblib>=1.3.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.1",
    "ipywidgets>=8.1.1",
]

[tool.uv]
dev-dependencies = []
